# racecar

./: .gitignore  README.md  installROSPackages.sh
android/JetsonRemoteControl/: build.gradle  local.properties  settings.gradle
android/JetsonRemoteControl/app/: build.gradle
android/JetsonRemoteControl/jetsonremotecontrol-app/: build.gradle
arduino/: arduino.ino
arduino/cmd_to_PWM_via_ROS/: cmd_to_PWM_via_ROS.ino
arduino/command_to_PWM_conversion/: command_to_PWM_conversion.ino  troubleshooting.txt
data-acquisition/: get_commands.sh  get_images.sh
data-acquisition/get-commands/: get_commands.py
data-acquisition/get-commands/tests/: commands.csv
data-acquisition/tests/: measure_bluetooth_intervals.py
desktop/alignment/: Dockerfile  docker_run_example.txt
desktop/alignment/scripts/: alignAndFormat.py  loadmp4.py  play_video.py  testAlignment.py
desktop/training/comma.ai/: .gitignore  dask_generator.py  get_steering_command.py  server.py  test_cam_and_opencv.py  train_steering_model.py  view_steering_model.py
driving/: if-open-cv-doesnt-work-read-this
jetson/data-acquisition/: SIGINT_ROSNodes.sh  measure_ms_intervals.py  record_both.sh  record_commands.sh  record_images.sh
jetson/data-acquisition/record_commands/: CMakeLists.txt  package.xml
jetson/data-acquisition/record_commands/src/: record_commands.py
jetson/data-acquisition/tests/: bashBasedPipeline.sh  (+10 more)
jetson/data_acquisition/: SIGINT_ROSNodes.sh  acquire_data.sh  get_sample.sh  record_both.sh  record_images.sh  requirements.txt  test_opencv_gstreamer.py  test_opencv_mp4.py  v4l2_test.py
jetson/data_acquisition/bluetooth/: CMakeLists.txt  package.xml
jetson/data_acquisition/bluetooth/src/: bluetooth.py
jetson/data_acquisition/bluetoothcpp/: CMakeLists.txt  package.xml
jetson/data_acquisition/bluetoothcpp/src/: bluetoothcpp.cpp  serialTest.cpp
jetson/data_acquisition/bluetoothcpp/src/bottomup/: serialTest.cpp  setupRFCOMMport.sh  testingSerial
jetsonhacks/installJetsonCar/: Run JetsonCar.txt  installJetsonCar.sh  setupCatkinWorkspace.sh
(+29 files in other folders)
