<?xml version="1.0"?>
<package>
  <name>record_commands</name>
  <version>0.0.0</version>
  <description>Listens to the joy topic; extracts the timestamp, throttle, and
  steering information; and writes it to a CSV.</description>

  <maintainer email="mwksmith@gmail.com">Matthew Kleinsmith</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rospy</build_depend>
  
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rospy</run_depend>

</package>
