<?xml version="1.0"?>
<package>
  <name>bluetooth</name>
  <version>0.0.0</version>
  <description>Reads commands from bluetooth port, writes commands along with the system time to a CSV, converts the commands to a geometry Twist message, and publishes the geometry Twist message to the 'commands' topic.</description>

  <maintainer email="mwksmith@gmail.com">Matthew Kleinsmith</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>

</package>
